Validar una sola instancia de la aplicacion ejecutandose

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,15 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PeticionesQueryReport
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Fuentes\\Ejecutable-query-report\\dist\\lib\\mysql-connector-java-5.1.23-bin.jar
-file.reference.okhttp-3.9.0.jar=C:\\Users\\rodrigo_dev\\Downloads\\okhttp-3.9.0.jar
-file.reference.okio-1.13.0.jar=C:\\Users\\rodrigo_dev\\Downloads\\okio-1.13.0.jar
+file.reference.mysql-connector-java-5.1.23.jar=..\\mysql-connector-java-5.1.23.jar
+file.reference.okhttp-3.9.0.jar-1=C:\\Users\\rodsanchez\\Documents\\NetBeansProjects\\DevelotecaJava\\Librerias\\okhttp-3.9.0.jar
+file.reference.okio-1.13.0.jar-1=C:\\Users\\rodsanchez\\Documents\\NetBeansProjects\\DevelotecaJava\\Librerias\\okio-1.13.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.okhttp-3.9.0.jar}:\
-    ${file.reference.okio-1.13.0.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.okhttp-3.9.0.jar-1}:\
+    ${file.reference.okio-1.13.0.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
